--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,6 +17,6 @@ production:
     - apt-get update -qy
     - apt-get install -y ruby-dev
     - gem install dpl
-    - dpl --provider=heroku --app=group26-backend --api-key=$HEROKU_API_KEY
+    - dpl --provider=heroku --app=group26-frontend --api-key=$HEROKU_API_KEY
   only:
     - master
