--- a/package.json
+++ b/package.json
@@ -37,5 +37,6 @@
     "url": "https://gitlab.doc.ic.ac.uk/g1836226/frontend.git"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {}
 }
