--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.1.3",
     "express": "^4.16.4",
     "hashmap": "^2.3.0",
     "html-to-react": "^1.3.3",
