--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express": "^4.16.4",
     "hashmap": "^2.3.0",
     "html-to-react": "^1.3.3",
+    "ldapjs": "^1.0.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
