--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "chart.js": "^2.7.3",
     "express": "^4.16.4",
     "hashmap": "^2.3.0",
     "html-to-react": "^1.3.3",
     "react": "^16.5.2",
+    "react-chartjs-2": "^2.7.4",
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.5",
     "redux": "^4.0.1",
+    "salad-ui.chart": "^1.1.55",
     "socket.io": "^2.1.1"
   },
   "scripts": {
