Adding some tests and making a change in the pipeline.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,5 +20,6 @@ production:
     - apt-get install -y ruby-dev
     - gem install dpl
     - dpl --provider=heroku --app=group26-frontend --api-key=$HEROKU_API_KEY
+    - CI=ture npm test
   only:
     - master
