--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.5",
+    "react-spinners": "^0.4.8",
     "redux": "^4.0.1",
     "salad-ui.chart": "^1.1.55",
     "socket.io": "^2.1.1"
