--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "express": "^4.16.4",
     "hashmap": "^2.3.0",
     "html-to-react": "^1.3.4",
+    "jquery": "^3.3.1",
     "ldapjs": "^1.0.2",
+    "popper.js": "^1.14.6",
     "react": "^16.7.0",
     "react-chartjs-2": "^2.7.4",
     "react-dom": "^16.7.0",
@@ -20,7 +22,8 @@
     "redux": "^4.0.1",
     "salad-ui.chart": "^1.1.55",
     "sinon": "^7.2.2",
-    "socket.io": "^2.1.1"
+    "socket.io": "^2.1.1",
+    "socket.io-client": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
